RESOLVED FIXED204868
Fix missing exception check in ArrayPrototype's fastJoin().
https://bugs.webkit.org/show_bug.cgi?id=204868
Summary Fix missing exception check in ArrayPrototype's fastJoin().
Mark Lam
Reported 2019-12-04 18:28:44 PST
Attachments
proposed patch. (2.43 KB, patch)
2019-12-04 18:32 PST, Mark Lam
saam: review+
Mark Lam
Comment 1 2019-12-04 18:32:10 PST
Created attachment 384870 [details] proposed patch.
Mark Lam
Comment 2 2019-12-04 19:20:52 PST
Thanks for the review. Landed in r253137: <http://trac.webkit.org/r253137>.
Note You need to log in before you can comment on or make changes to this bug.