Fix missing exception check in ArrayPrototype's fastJoin(). https://bugs.webkit.org/show_bug.cgi?id=204868 <rdar://problem/57516684>

Reviewed by Saam Barati.

JSTests:

* stress/missing-exception-check-in-array-prototype-fastJoin.js: Added.

Source/JavaScriptCore:

* runtime/ArrayPrototype.cpp:
(JSC::fastJoin):



Canonical link: https://commits.webkit.org/218093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253137 268f45cc-cd09-0410-ab3c-d52691b4dbfc